--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 									<li><a class="scroll" href="#about">About</a></li>
 									<li><a class="scroll" href="#mentors">Judges & Mentors</a></li>
 									<li><a class="scroll" href="#workshop">Workshop</a></li>
-									<li><a class="scroll" href="#prizes">Prizes</a></li>
-									<li><a class="scroll" href="#sponsors">Sponsors</a></li>
+									<!-- <li><a class="scroll" href="#prizes">Prizes</a></li>
+									<li><a class="scroll" href="#sponsors">Sponsors</a></li> -->
 								</ul>
 							</nav>
 						</div>
